Fixed background cutoff issue and transition on app routes

--- a/src/styles/transitions.scss
+++ b/src/styles/transitions.scss
@@ -1,11 +1,9 @@
 .fade-enter,
 .fade-leave-to { opacity: 0; }
 
-.fade-enter-active {
-  transition: 0.2s ease-in .3s;
-}
+.fade-enter-active,
 .fade-leave-active {
-  transition: 0.2s ease-out;
+  transition: opacity 0.3s ease;
 }
 
 .slide-enter {
